# bittrade-kraken-cli

./: README.md  cli.py  pyproject.toml
bittrade_kraken_cli/: __init__.py  cli.py  console.py  logging.py
sample_websockets/: addOrder.json  subscribeOpenOrders.json  subscribeOwnTrades.json  subscribeTicker.json  ticker_USDT_USD.jsonl  unsubscribeOpenOrders.json
sample_websockets/received/: ohlc_XRPUSD.jsonl  open_orders.json  ticker_XRPUSD.jsonl
tests/: test_bittrade_kraken_cli.py
