[tool.poetry]
name = "bittrade-kraken-cli"
version = "0.1.0"
description = ""
authors = ["Mat <mathieu@redapesolutions.com>"]

[tool.poetry.dependencies]
python = "^3.10"
bittrade-kraken-rest = "^0.10.0"
fire = "^0.5.0"
rich = "^12.6.0"
bittrade-kraken-websocket = "^0.2.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
bittrade-kraken-websocket = {path = "../bittrade-kraken-websocket"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
