[tool.poetry]
name = "bittrade-kraken-cli"
version = "0.1.0"
description = ""
authors = ["Mat <matt@techspace.asia>"]

[tool.poetry.dependencies]
python = "^3.10"
bittrade-kraken-rest = "^0.12.1"
fire = "^0.5.0"
rich = "^12.6.0"
bittrade-kraken-websocket = "^0.3.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
